--- a/vercel.json
+++ b/vercel.json
@@ -3,19 +3,26 @@
     {
       "source": "/login",
       "destination": "/index.html"
-    },
-    {
-      "source": "/login?session_expired=true",
-      "destination": "/index.html"
     }
   ],
   "routes": [
     {
-      "handle": "filesystem"
+      "src": "/api/(.*)",
+      "dest": "https://e-commerce-backend-production-36dc.up.railway.app/api/$1"
     },
     {
-      "src": "/.*",
-      "dest": "/index.html"
+      "src": "/_next/static/(.*)",
+      "dest": "/_next/static/$1"
+    },
+    {
+      "src": "/static/(.*)",
+      "dest": "/static/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html",
+      "status": 200
     }
-  ]
+  ],
+  "cleanUrls": true
 }
