--- a/vercel.json
+++ b/vercel.json
@@ -1,25 +1,12 @@
 {
   "rewrites": [
     {
-      "source": "/login",
+      "source": "/api/(.*)",
+      "destination": "https://e-commerce-backend-production-36dc.up.railway.app/api/$1"
+    },
+    {
+      "source": "/(.*)",
       "destination": "/index.html"
     }
-  ],
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "https://e-commerce-backend-production-36dc.up.railway.app/api/$1"
-    },
-    {
-      "src": "/login(.*)", 
-      "dest": "/index.html",
-      "status": 200
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.html",
-      "status": 200
-    }
-  ],
-  "cleanUrls": false 
+  ]
 }
