--- a/vercel.json
+++ b/vercel.json
@@ -12,12 +12,7 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "https://e-commerce-backend-production-36dc.up.railway.app/api/$1",
-      "headers": {
-        "Access-Control-Allow-Origin": "*",
-        "Access-Control-Allow-Methods": "GET,POST,PUT,DELETE,OPTIONS",
-        "Access-Control-Allow-Headers": "Content-Type, Authorization"
-      }
+      "dest": "https://e-commerce-backend-production-36dc.up.railway.app/api/$1"
     },
     {
       "src": "/(.*)",
