--- a/vercel.json
+++ b/vercel.json
@@ -1,26 +1,16 @@
 {
-  "version": 2,
-  "builds": [
+  "rewrites": [
     {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
+      "source": "/auth/(.*)",
+      "destination": "https://e-commerce-backend-production-36dc.up.railway.app/api/auth/$1"
     }
   ],
   "routes": [
     {
-      "src": "/auth/(.*)",
-      "dest": "https://e-commerce-backend-production-36dc.up.railway.app/api/auth/$1",
-      "headers": {
-        "Access-Control-Allow-Origin": "*",
-        "Access-Control-Allow-Methods": "GET,POST,PUT,DELETE,OPTIONS",
-        "Access-Control-Allow-Headers": "Content-Type, Authorization"
-      }
+      "handle": "filesystem"
     },
     {
-      "src": "/(.*)",
+      "src": "/.*",
       "dest": "/index.html"
     }
   ]
