Fix: update API baseURL and environment variables

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ VITE_API_BASE_URL=https://e-commerce-backend-production-36dc.up.railway.app/api
 VITE_EMAILJS_PUBLIC_KEY=9ctOmlYkEDvfDjSWQ
 VITE_EMAILJS_SERVICE_ID=service_8k51bas
 VITE_EMAILJS_TEMPLATE_ID=template_a5qjter
+VITE_FRONTEND_URL=https://ecommerce-client-woad.vercel.app
