--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,10 @@
   ],
   "rewrites": [
     {
+      "source": "/api/(.*)",
+      "destination": "https://e-commerce-backend-production-36dc.up.railway.app/api/$1"
+    },
+    {
       "source": "/auth/(.*)",
       "destination": "https://e-commerce-backend-production-36dc.up.railway.app/api/auth/$1"
     },
