--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
       "use": "@vercel/static-build"
     }
   ],
-  "rewrites": [
+  "routes": [
     {
       "source": "/api/(.*)",
       "destination": "https://e-commerce-backend-production-36dc.up.railway.app/api/$1"
