--- a/vercel.json
+++ b/vercel.json
@@ -6,14 +6,19 @@
       "use": "@vercel/static-build"
     }
   ],
-  "rewrites": [
+  "routes": [
     {
-      "source": "/api/(.*)",
-      "destination": "https://e-commerce-backend-production-36dc.up.railway.app/api/$1"
+      "src": "/api/(.*)",
+      "dest": "https://e-commerce-backend-production-36dc.up.railway.app/api/$1"
     },
     {
-      "source": "/(.*)",
-      "destination": "/index.html"
+      "src": "/_next/static/(.*)",
+      "headers": { "Cache-Control": "public, max-age=31536000, immutable" }
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html",
+      "headers": { "Content-Type": "text/html; charset=utf-8" }
     }
   ]
 }
