--- a/vercel.json
+++ b/vercel.json
@@ -13,12 +13,15 @@
     },
     {
       "src": "/_next/static/(.*)",
-      "headers": { "Cache-Control": "public, max-age=31536000, immutable" }
+      "dest": "/_next/static/$1"
+    },
+    {
+      "src": "/(.*\\.(js|css|json|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot))",
+      "dest": "/$1"
     },
     {
       "src": "/(.*)",
-      "dest": "/index.html",
-      "headers": { "Content-Type": "text/html; charset=utf-8" }
+      "dest": "/index.html"
     }
   ]
 }
